--- a/bmb_sender_stm32f3/Cargo.toml
+++ b/bmb_sender_stm32f3/Cargo.toml
@@ -7,9 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-stm32f3xx-hal = {version = "0.5.0", features = ["stm32f303xc"]}
-# stm32f3 = {version = "0.12", features = ["stm32f303", "rt"]}
+stm32f3xx-hal = {version = "0.5.0", features = ["stm32f303xc", "rt"]}
 cortex-m-rt = "0.6"
+panic-itm = "0.4"
+# panic-abort = "0.3"
 
 [profile.release]
 opt-level = 'z'
+lto = true
+
+[[bin]]
+name = "bmb_sender_stm32f3"
+test = false
+bench = false
