--- a/bmb_sender_stm32f401/Cargo.toml
+++ b/bmb_sender_stm32f401/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bmb_sender_stm32f401"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Rory Coffey <coffeyrt@gmail.com>"]
 edition = "2018"
 
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 cortex-m-rt = "0.6"
+cortex-m-rtic = "0.5"
 panic-itm = "0.4"
 panic-abort = "0.3"
 stm32f4xx-hal = {version = "0.8", features = ["stm32f401", "rt"]}
