--- a/bmb_sender_stm32f3/Cargo.toml
+++ b/bmb_sender_stm32f3/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "bmb_sender_stm32f3"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["coffeyrt <coffeyrt@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cortex-m-rt = "0.6"
+cortex-m = "0.6.4"
+cortex-m-rtic = "0.5"
 panic-itm = "0.4"
 panic-abort = "0.3"
 stm32f3xx-hal = {version = "0.5.0", features = ["stm32f303xc", "rt"]}
-nb = "0.1"
 
 [profile.dev]
 opt-level = 's'
