--- a/bmb_sender_stm32f401/Cargo.toml
+++ b/bmb_sender_stm32f401/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 cortex-m = "0.6"
 cortex-m-rt = "0.6"
 cortex-m-rtic = "0.5"
+cortex-m-semihosting = "0.3.5"
 panic-itm = "0.4"
 panic-abort = "0.3"
 stm32f4xx-hal = {version = "0.8", features = ["stm32f401", "rt"]}
@@ -17,9 +18,10 @@ stm32f4xx-hal = {version = "0.8", features = ["stm32f401", "rt"]}
 [profile.dev]
 opt-level = 's'
 lto = true
+debug = true 
 
 [profile.release]
 opt-level = 'z'
 lto = true
-debug = false
+debug = true 
 test = false
