--- a/bmb_sender_stm32f401/Cargo.toml
+++ b/bmb_sender_stm32f401/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cortex-m = "0.6"
 cortex-m-rt = "0.6"
 panic-itm = "0.4"
 panic-abort = "0.3"
